data/derived/sp14/progs/unify/prog3499.ml.out
Characters 8-15:
  let _ = clone 3 -4;;
          ^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
